# AGGIE

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT_GOAL.md  Dockerfile  Dockerfile.gpu  README.md  docker-compose.gpu.yaml  docker-compose.yaml  pyproject.toml  test_aggie_feature.py
config/: README.md  aggie.yaml.example
config/systemd/: aggie.service
models/: .gitkeep  hey_aggie.onnx  hey_aggie.tflite
src/aggie/: README.md  __init__.py  __main__.py  config.py  daemon.py  logging.py  state.py
src/aggie/audio/: README.md  __init__.py  buffer.py  capture.py  cues.py  playback.py
src/aggie/cli/: README.md  __init__.py  ctl.py
src/aggie/context/: README.md  __init__.py  composer.py  compressor.py  project_state.py  session.py  summarizer.py
src/aggie/detection/: README.md  __init__.py  wakeword.py
src/aggie/ipc/: README.md  __init__.py  protocol.py  server.py
src/aggie/llm/: README.md  __init__.py  claude.py  sentence_buffer.py
src/aggie/router/: __init__.py  llama.py  router.py  system_commands.py
src/aggie/stt/: README.md  __init__.py  whisper.py
src/aggie/tools/: __init__.py  bash.py  mcp_manager.py  registry.py
src/aggie/tts/: README.md  __init__.py  piper.py
tests/: README.md  __init__.py  conftest.py  test_context.py  test_router.py  test_sentence_buffer.py  test_session.py  test_tools.py
